# msdata

./: README.md  pyproject.toml
src/msdata/: __init__.py  paths.py
src/msdata/access/: interfaces.py  main.py
src/msdata/cli/: main.py
src/msdata/summary/: main.py
static/_04_temp/snakemake/0_50/4969/edges/: out.json
static/_04_temp/snakemake/0_50/4969/layout/: out.json
static/_04_temp/snakemake/0_50/4969/ortho/: out.json
static/_04_temp/snakemake/0_50/4969/rotate/: out.json
static/_04_temp/snakemake/0_50/4969/simplify/: out.json
static/_04_temp/snakemake/0_50/4969/xmove/: out.json
static/_04_temp/snakemake/0_50/4969/xplan/: out.json
static/_04_temp/snakemake/0_50/4969/ymove/: out.json
static/_04_temp/snakemake/0_50/4969/yplan/: out.json
static/_04_temp/snakemake/0_50/4973/edges/: out.json
static/_04_temp/snakemake/0_50/4973/layout/: out.json
static/_04_temp/snakemake/0_50/4973/rotate/: out.json
static/_04_temp/snakemake/0_50/4981/edges/: out.json
static/_04_temp/snakemake/0_50/4981/layout/: out.json
static/_04_temp/snakemake/0_50/4981/rotate/: out.json
static/_04_temp/summary/0_50/: 4969.json  4973.json  4981.json  4987.json  5013.json  5014.json  5022.json  5056.json  5058.json  5061.json  5064.json  5070.json  5089.json  5118.json  5120.json  5124.json  5125.json  5152.json  5153.json  5155.json  5299.json  5368.json  5389.json  5406.json  5409.json  5412.json  5437.json  5478.json  5484.json  5485.json  5490.json  5491.json  5492.json  5495.json  5500.json  5531.json  5539.json  5542.json  5551.json  5553.json  (+10 more)
(+242 files in other folders)
