[project]
name = "msdata"
version = "0.1.0"
description = "Data from msd analysis"
readme = "README.md"
authors = [
  { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" },
]
requires-python = ">=3.13"
dependencies = [
  "cyclopts>=4.5.1",
  "polars>=1.38.1",
  "polyfix>=0.1.0",
  "pyprojroot>=0.3.0",
  "utils4plans>=0.1.12",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
msdata = "msdata.cli.main:main"
